# i dont know how cargo works so i copied it from the simple Rust 🚀 hello world program and added required dependencies
[package]
name    = "hello-world"
version = "0.1.0"
authors = ["mTvare6 <mTvare6@users.noreply.github.com>"]
edition = "2018"

[dependencies]
quick-js          = "0.4.1" # for j*vascript 🤮🤮🤮 mods
jni               = "0.19.0" # idk i think this adds java support or something

actix-web         = "3.3.2"
amethyst          = { version = "0.15.3", features = ["empty"] }
aseprite          = "0.1.3"
ash               = "0.33.3"
backtrace         = "0.3.61"
bytes             = "1.1.0"
cash              = "0.1.5"
chashmap          = "2.2.2"
chrono            = "0.4.19"
chrono-tz         = "0.6.0"
clap              = "3.0.0-beta.4"
cookie            = "0.15.1"
cookie_store      = "0.15.0"
crate             = "0.0.2"
crossbeam         = "0.8.1"
crossterm         = "0.21.0"
crypto            = "0.3.0"
cssparser         = "0.29.0"
data-encoding     = "2.3.2"
data-url          = "0.1.0"
diesel            = "1.4.8"
diesel_migrations = "1.4.0"
distill           = "0.0.3"
dotenv            = "0.15.0"
fern              = "0.6.0"
fluent-bundle     = "0.15.1"
french-numbers    = "1.1.2"
fuck              = "0.0.0"
futures           = "0.3.17"
get-shell         = "0.1.0"
gfx               = "0.18.2"
gl                = "0.14.0"
glam              = "0.19.0"
glfw              = "0.42.0"
gtk               = "0.14.3"
handlebars        = "4.1.3"
html5ever         = "0.25.1"
hyper             = "0.14.13"
idna              = "0.2.3"
job_scheduler     = "1.2.1"
jsonwebtoken      = "7.2.0"
legion            = "0.4.0"
lettre            = "0.10.0-rc.3"
libsqlite3-sys    = "0.23.1"
log               = "0.4.14"
markup            = "0.12.5"
markup5ever_rcdom = "0.1.0"
money             = "0.1.0"
mp4parse          = "0.11.5"
multipart         = "0.18.0"
nix               = "0.23.0"
nom               = "7.0.0"
num               = "0.4.0"
num_cpus          = "1.13.0"
num-derive        = "0.3.3"
num-traits        = "0.2.14"
once_cell         = "1.8.0"
openssl           = "0.10.36"
paste             = "1.0.5"
pico-args         = "0.4.2"
percent-encoding  = "2.1.0"
plist             = "1.2.1"
pretty_assertions = "1.0.0"
r_i18n            = "1.0.1"
rand              = "0.8.4"
regex             = "1.5.4"
reqwest           = "0.11.5"
ring              = "0.16.20"
rmpv              = "1.0.0"
security          = "0.1.0"
serenity          = "0.10.9"
tensorflow        = "0.17.0"
u2f               = "0.2.0"
url               = "2.2.2"
uuid              = "0.8.2"
uwuify            = "0.2.2"
serde             = "1.0.130"
serde_json        = "1.0.68"
tempfile          = "3.2.0"
textwrap          = "0.14.2"
time              = "0.3.3"
tracing           = "0.1.29"
walkdir           = "2.3.2"
webauthn-rs       = "0.3.0-alpha.12"
webdriver         = "0.44.0"
winapi            = "0.3.9"
ws                = "0.9.1"
x11               = "2.19.1"
yubico            = "0.10.0"
